<resources>
    <string name="title">Bluetooth Nonin</string>
    <string name="preference">Preferences</string>
    <string name="mainTitle">Bluetooth Nonin</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_filename">Filename</string>
    <string name="pref_server">Server</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_measurement">Measurement</string>
    <string name="pref_measurement_time">Time to measure</string>
    <string name="pref_measurement_time_summary">Choose measurement time</string>
    <string-array name="measuretime_labels">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="measuretime_values">
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>
</resources>